--- a/build.properties
+++ b/build.properties
@@ -10,6 +10,7 @@ dependency.kettle.revision=TRUNK-SNAPSHOT
 dependency.kettle5-log4j.revision=TRUNK-SNAPSHOT
 dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
 
-dependency.libthrift.revision=0.6
-dependency.apache-cassandra.revision=1.0.8
-dependency.apache-cassandra-thrift.revision=1.0.8
+dependency.libthrift.revision=0.7.0
+dependency.apache-cassandra.revision=1.2.4
+dependency.apache-cassandra-thrift.revision=1.2.4
+dependency.snakeyaml.revision=1.6
