--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
 	xmlns:ivy="antlib:org.apache.ivy.ant" >
 	
 	<description>
-	  This build file is used to create the Pentaho Big Data Plugin project
+	  This build file is used to create the Pentaho Cassandra project
 		and works with the subfloor.xml file.
 	</description>
 
@@ -40,5 +40,33 @@
     <mkdir dir="${stage.dir}/${ivy.artifact.id}" />
   </target>
 
+	  <target name="assemble.copy-libs">
+	    <copy todir="${stage.dir}/${ivy.artifact.id}/lib">
+	      <fileset dir="${lib.dir}">
+			<exclude name="kettle-*.jar" />
+			<exclude name="pentaho-xul-*.jar" />
+			<exclude name="metro-*.jar" />
+			<exclude name="log4j-*.jar" />
+			<exclude name="jface*.jar" />
+			<exclude name="hadoop-*.jar" />
+			<exclude name="hbase-*.jar" />
+			<exclude name="zookeeper-*.jar" />
+			<exclude name="jug-*.jar" />
+			<exclude name="commons-codec*.jar" />
+			<exclude name="commons-io*.jar" />
+			<exclude name="commons-lang*.jar" />
+			<exclude name="commons-logging*.jar" />
+			<exclude name="commons-vfs*.jar" />
+			<exclude name="pentaho-vfs-browser*.jar" />
+			<exclude name="scannotation*.jar" />
+			<exclude name="dom4j*.jar" />	      	
+			<exclude name="jface*.jar" />	      	
+			<exclude name="x86*.jar" />	      	
+          </fileset>
+	    </copy>
+	    <copy todir="${stage.dir}/${ivy.artifact.id}">
+	      <fileset file="${dist.dir}/${package.basename}.jar" />
+	    </copy>
+	  </target>
 	
 </project>
