PDI-9649: Changed project name to match Git repo, added JUnit to test config

--- a/ivy.xml
+++ b/ivy.xml
@@ -34,5 +34,8 @@
     
     <dependency org="log4j"                    name="log4j"           rev="1.2.14" />
     
+    
+    <dependency org="junit" name="junit" rev="4.5" conf="test->default" />
+    
   </dependencies>
 </ivy-module>
