--- a/build.properties
+++ b/build.properties
@@ -2,11 +2,11 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=1.3-SNAPSHOT
+project.revision=1.0.0-GA
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=4.4.2-SNAPSHOT
+dependency.kettle.revision=4.4.0-GA
 
 dependency.libthrift.revision=0.6
 dependency.apache-cassandra.revision=1.0.8
