--- a/ivy.xml
+++ b/ivy.xml
@@ -17,8 +17,8 @@
 
   <dependencies defaultconf="default->default">
 
-    <dependency org="org.eclipse.swt.win32.win32" name="x86" rev="3.3.0-v3346" transitive="false" /> 
-    <dependency org="org.eclipse" name="jface" rev="3.3.0-I20070606-0010" transitive="false" />
+    <dependency org="org.eclipse.swt.win32.win32" name="x86" rev="3.3.0-v3346" transitive="false" conf="provided->default" /> 
+    <dependency org="org.eclipse" name="jface" rev="3.3.0-I20070606-0010" transitive="false" conf="provided->default" />
     
     <dependency org="pentaho-kettle" name="kettle-engine" rev="${dependency.kettle.revision}" transitive="false" conf="provided->default"
       changing="true" />
@@ -34,7 +34,7 @@
     <dependency org="org.apache.cassandra" name="cassandra-all" rev="${dependency.apache-cassandra.revision}" transitive="false" conf="default->default" changing="false"/>
     <dependency org="org.apache.cassandra" name="cassandra-thrift" rev="${dependency.apache-cassandra-thrift.revision}" transitive="false" conf="default->default"  changing="false"/>
     
-    <dependency org="log4j"                    name="log4j"           rev="1.2.14" />
+    <dependency org="log4j"                    name="log4j"           rev="1.2.14" conf="provided->default" />
     
   </dependencies>
 </ivy-module>
