PDI-9556: fixed artifact version for CI

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,7 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=1.0.0-GA
+project.revision=1.0-SNAPSHOT
 
 junit.maxmemory=500M
 
