PDI-9556: Added guava dependency

--- a/build.properties
+++ b/build.properties
@@ -11,3 +11,4 @@ dependency.kettle.revision=4.4.0-GA
 dependency.libthrift.revision=0.6
 dependency.apache-cassandra.revision=1.0.8
 dependency.apache-cassandra-thrift.revision=1.0.8
+dependency.guava.revision=r08
