--- a/ivy.xml
+++ b/ivy.xml
@@ -33,6 +33,7 @@
       changing="false"/>
     <dependency org="org.apache.cassandra" name="cassandra-all" rev="${dependency.apache-cassandra.revision}" transitive="false" conf="default->default" changing="false"/>
     <dependency org="org.apache.cassandra" name="cassandra-thrift" rev="${dependency.apache-cassandra-thrift.revision}" transitive="false" conf="default->default"  changing="false"/>
+    <dependency org="com.google.guava" name="guava" rev="${dependency.guava.revision}" transitive="false" conf="default->default"  changing="false"/>
     
     <dependency org="log4j"                    name="log4j"           rev="1.2.14" conf="provided->default" />
     
