--- a/build.properties
+++ b/build.properties
@@ -2,12 +2,13 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=1.3-SNAPSHOT
+project.revision=1.0-SNAPSHOT
 
 junit.maxmemory=500M
 
 dependency.kettle.revision=4.4.2-SNAPSHOT
 
-dependency.libthrift.revision=0.6
-dependency.apache-cassandra.revision=1.0.8
-dependency.apache-cassandra-thrift.revision=1.0.8
+dependency.libthrift.revision=0.7.0
+dependency.apache-cassandra.revision=1.2.4
+dependency.apache-cassandra-thrift.revision=1.2.4
+dependency.snakeyaml.revision=1.6
