Added missing guava and metastore dependencies.

--- a/build.properties
+++ b/build.properties
@@ -14,3 +14,5 @@ dependency.libthrift.revision=0.7.0
 dependency.apache-cassandra.revision=1.2.4
 dependency.apache-cassandra-thrift.revision=1.2.4
 dependency.snakeyaml.revision=1.6
+dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
+dependency.guava.revision=13.0.1
