Create tag from build job 'big-data-cassandra-plugin' #90, source branch 'master'

--- a/build.properties
+++ b/build.properties
@@ -1,18 +1,16 @@
-impl.title=Pentaho Cassandra Plugin
-impl.productID=pentaho-cassandra-plugin
-ivy.artifact.id=pentaho-cassandra-plugin
+#Merged versions for 5.0.0.1 release.
+#Wed Sep 11 14:25:26 EDT 2013
 ivy.artifact.group=pentaho
-project.revision=TRUNK-SNAPSHOT
-
-junit.maxmemory=500M
-
-dependency.kettle.revision=TRUNK-SNAPSHOT
-dependency.kettle5-log4j.revision=TRUNK-SNAPSHOT
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
-
-dependency.libthrift.revision=0.7.0
-dependency.apache-cassandra.revision=1.2.4
-dependency.apache-cassandra-thrift.revision=1.2.4
+dependency.kettle5-log4j.revision=5.0.0.1
 dependency.snakeyaml.revision=1.6
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
+project.revision=5.0.0.1
+dependency.pentaho-metastore.revision=5.0.0.1
+dependency.apache-cassandra.revision=1.2.4
+impl.title=Pentaho Cassandra Plugin
+dependency.apache-cassandra-thrift.revision=1.2.4
+junit.maxmemory=500M
+impl.productID=pentaho-cassandra-plugin
 dependency.guava.revision=13.0.1
+dependency.libthrift.revision=0.7.0
+ivy.artifact.id=pentaho-cassandra-plugin
+dependency.kettle.revision=5.0.0.1
