Create tag from build job 'big-data-cassandra-plugin' #230, source branch '5.1'

--- a/build.properties
+++ b/build.properties
@@ -2,17 +2,16 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=TRUNK-SNAPSHOT
+project.revision=5.1.preview.506
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=TRUNK-SNAPSHOT
-dependency.kettle5-log4j.revision=TRUNK-SNAPSHOT
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
+dependency.kettle.revision=5.1.preview.506
+dependency.kettle5-log4j.revision=5.1.preview.506
+dependency.pentaho-metastore.revision=5.1.preview.506
 
 dependency.libthrift.revision=0.7.0
 dependency.apache-cassandra.revision=1.2.4
 dependency.apache-cassandra-thrift.revision=1.2.4
 dependency.snakeyaml.revision=1.6
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
 dependency.guava.revision=13.0.1
