--- a/build.properties
+++ b/build.properties
@@ -2,13 +2,13 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=5.0-SNAPSHOT
+project.revision=5.0.6
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=5.0-SNAPSHOT
-dependency.kettle5-log4j.revision=5.0-SNAPSHOT
-dependency.pentaho-metastore.revision=5.0-SNAPSHOT
+dependency.kettle.revision=5.0.6
+dependency.kettle5-log4j.revision=5.0.6
+dependency.pentaho-metastore.revision=5.0.6
 
 dependency.libthrift.revision=0.7.0
 dependency.apache-cassandra.revision=1.2.4
