--- a/build.xml
+++ b/build.xml
@@ -9,7 +9,10 @@
 ============================================================================-->
 <project name="Pentaho Cassandra Plugin" basedir="." default="dist"
 	xmlns:ivy="antlib:org.apache.ivy.ant" >
-	
+
+	<!-- For ant version below 1.8.2 -->
+	<defaultexcludes add="**/.gitignore"/>
+
 	<description>
 	  This build file is used to create the Pentaho Cassandra project
 		and works with the subfloor.xml file.
