[ENGOPS-668] prop version settings to correct SNAPSHOT(s)

--- a/build.properties
+++ b/build.properties
@@ -6,7 +6,7 @@ project.revision=1.0-SNAPSHOT
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=4.4.2-SNAPSHOT
+dependency.kettle.revision=4.4.X-SNAPSHOT
 
 dependency.libthrift.revision=0.7.0
 dependency.apache-cassandra.revision=1.2.4
