Create tag from build job '5.2-nightly/big-data-cassandra-plugin' b55, source branch '5.2.0.2'

--- a/build.properties
+++ b/build.properties
@@ -2,17 +2,16 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=TRUNK-SNAPSHOT
+project.revision=5.2.0.2-84
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=TRUNK-SNAPSHOT
-dependency.kettle5-log4j.revision=TRUNK-SNAPSHOT
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
+dependency.kettle.revision=5.2.0.2-84
+dependency.kettle5-log4j.revision=5.2.0.2-84
+dependency.pentaho-metastore.revision=5.2.0.2-84
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.0.7
 dependency.apache-cassandra-thrift.revision=2.0.7
 dependency.snakeyaml.revision=1.11
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
 dependency.guava.revision=15.0
