PDI-14838 - As a modern developer I want to be able to assemble pentaho-cassandra-plugin using java 8 jdk
 Since java 8 brings 'With Java 8, when using a class, the interfaces it
 implements must be on the compile classpath as well. With Java 7, it was
 enough that the interface was on the classpath while compiling the used
 class.' penatho-cassandra-plugin require direct dependecy on
 pentaho-xul-core to be able to compile agaings java 8.

--- a/ivy.xml
+++ b/ivy.xml
@@ -25,6 +25,7 @@
       changing="true" />
     <dependency org="pentaho-kettle" name="kettle-ui-swt" rev="${dependency.kettle.revision}" transitive="false" conf="default->default"
       changing="true" />
+    <dependency org="pentaho" name="pentaho-xul-core" rev="${dependency.pentaho-xul.revision}" changing="true" />
 
     <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"   changing="true" />
 
