--- a/build.properties
+++ b/build.properties
@@ -7,6 +7,7 @@ project.revision=6.1-SNAPSHOT
 junit.maxmemory=500M
 
 dependency.kettle.revision=6.1-SNAPSHOT
+dependency.pentaho-xul.revision=6.1-SNAPSHOT
 dependency.kettle5-log4j.revision=6.1-SNAPSHOT
 dependency.pentaho-metastore.revision=6.1-SNAPSHOT
 
