--- a/build.properties
+++ b/build.properties
@@ -2,13 +2,13 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=6.0-SNAPSHOT
+project.revision=6.0.1.1-398
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=6.0-SNAPSHOT
-dependency.kettle5-log4j.revision=6.0-SNAPSHOT
-dependency.pentaho-metastore.revision=6.0-SNAPSHOT
+dependency.kettle.revision=6.0.1.1-398
+dependency.kettle5-log4j.revision=6.0.1.1-398
+dependency.pentaho-metastore.revision=6.0.1.1-398
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.0.7
