Create tag from build job '6.1-qat/big-data-cassandra-plugin' b275, source branch '6.1.0.3'

--- a/build.properties
+++ b/build.properties
@@ -2,14 +2,14 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=6.1-SNAPSHOT
+project.revision=6.1.0.3-223
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=6.1-SNAPSHOT
-dependency.pentaho-xul.revision=6.1-SNAPSHOT
-dependency.kettle5-log4j.revision=6.1-SNAPSHOT
-dependency.pentaho-metastore.revision=6.1-SNAPSHOT
+dependency.kettle.revision=6.1.0.3-223
+dependency.pentaho-xul.revision=6.1.0.3-223
+dependency.kettle5-log4j.revision=6.1.0.3-223
+dependency.pentaho-metastore.revision=6.1.0.3-223
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.0.7
