--- a/ivy.xml
+++ b/ivy.xml
@@ -29,21 +29,29 @@
 
     <dependency org="pentaho"             name="metastore"           rev="${dependency.pentaho-metastore.revision}"   changing="true" />
 
+    <!-- Third-party (external) dependencies -->
+    <dependency org="org.eclipse.swt.win32.win32" name="x86" rev="3.3.0-v3346" transitive="false" />
+    <dependency org="org.eclipse" name="jface" rev="3.3.0-I20070606-0010" transitive="false" />
+
     <dependency org="com.google.guava" name="guava" rev="${dependency.guava.revision}" transitive="false" conf="default->default"  changing="false"/>
-    <dependency org="org.apache.thrift" name="libthrift" rev="${dependency.libthrift.revision}" transitive="false" conf="default->default"
-      changing="false"/>
+    <dependency org="org.apache.thrift" name="libthrift" rev="${dependency.libthrift.revision}" transitive="false" conf="default->default" changing="false"/>
     <dependency org="org.apache.cassandra" name="cassandra-all" rev="${dependency.apache-cassandra.revision}" transitive="false" conf="default->default" changing="false"/>
     <dependency org="org.apache.cassandra" name="cassandra-thrift" rev="${dependency.apache-cassandra-thrift.revision}" transitive="false" conf="default->default"  changing="false"/>
+
     <dependency org="org.yaml" name="snakeyaml" rev="${dependency.snakeyaml.revision}" transitive="false" conf="default->default"  changing="false"/>
     <dependency org="org.slf4j" name="slf4j-api" rev="1.7.7" transitive="false" conf="default->default"  changing="false"/>
     <dependency org="org.slf4j" name="slf4j-log4j12" rev="1.7.7" transitive="false" conf="default->default"  changing="false"/>
+    <dependency org="log4j" name="log4j" rev="1.2.14" />
 
-    <dependency org="log4j"                    name="log4j"           rev="1.2.14" />
-
+    <!--  for testing -->
+    <dependency org="org.mockito" name="mockito-all"   rev="1.9.5"   conf="test->default" transitive="false" />
     <dependency org="junit" name="junit" rev="4.5" conf="test->default" />
+    <dependency org="org.apache.commons" name="commons-vfs2" rev="2.1-20150824" conf="test->default" />
     <dependency org="pentaho-kettle" name="kettle-engine" rev="${dependency.kettle.revision}" transitive="false" conf="test->default" >
       <artifact name="kettle-engine" ext="jar" m:classifier="tests"/>
     </dependency>
+    <dependency org="pentaho-kettle" name="kettle-core" rev="${dependency.kettle.revision}" transitive="true" conf="test->default" changing="true"/>
+    <dependency org="org.apache.cassandra" name="cassandra-all" rev="${dependency.apache-cassandra.revision}" transitive="true" conf="test->default" changing="false"/>
 
   </dependencies>
 </ivy-module>
