Create tag from build job '7.0/big-data-cassandra-plugin' b213, source branch '7.0.0.6'

--- a/build.properties
+++ b/build.properties
@@ -2,14 +2,14 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=7.0-SNAPSHOT
+project.revision=7.0.0.6-95
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=7.0-SNAPSHOT
-dependency.pentaho-xul.revision=7.0-SNAPSHOT
-dependency.kettle5-log4j.revision=7.0-SNAPSHOT
-dependency.pentaho-metastore.revision=7.0-SNAPSHOT
+dependency.kettle.revision=7.0.0.6-95
+dependency.pentaho-xul.revision=7.0.0.6-95
+dependency.kettle5-log4j.revision=7.0.0.6-95
+dependency.pentaho-metastore.revision=7.0.0.6-95
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.0.7
