--- a/build.properties
+++ b/build.properties
@@ -9,10 +9,24 @@ junit.maxmemory=500M
 dependency.kettle.revision=8.0-SNAPSHOT
 dependency.pentaho-xul.revision=8.0-SNAPSHOT
 dependency.kettle5-log4j.revision=8.0-SNAPSHOT
-dependency.pentaho-metastore.revision=8.0-SNAPSHOT
 
 dependency.libthrift.revision=0.9.1
-dependency.apache-cassandra.revision=2.0.7
-dependency.apache-cassandra-thrift.revision=2.0.7
+dependency.apache-cassandra.revision=2.2.9
+dependency.apache-cassandra-thrift.revision=2.2.9
 dependency.snakeyaml.revision=1.11
-dependency.guava.revision=15.0
+dependency.guava.revision=17.0
+dependency.commons-lang3.revision=3.0
+dependency.high-scale-lib.revision=1.0.6
+dependency.jamm.revision=0.3.0
+dependency.jna.revision=4.0.0
+dependency.lz4.revision=1.3.0
+dependency.dropwizard-metrics.revision=3.1.0
+dependency.sigar.revision=1.6.4
+dependency.clearspring-stream.revision=2.8.0
+dependency.supercsv.revision=2.1.0
+dependency.concurrentlinkedhashmap-lru.revision=1.4
+dependency.commons-lang.revision=2.6
+dependency.log4j.revision=1.2.14
+
+dependency.cassandra-driver.revision=3.2.0
+dependency.netty.revision=4.0.44.Final
