Create tag from build job '8.0/big-data-cassandra-plugin' b247, source branch '8.0.0.0'

--- a/build.properties
+++ b/build.properties
@@ -2,13 +2,13 @@ impl.title=Pentaho Cassandra Plugin
 impl.productID=pentaho-cassandra-plugin
 ivy.artifact.id=pentaho-cassandra-plugin
 ivy.artifact.group=pentaho
-project.revision=8.0-SNAPSHOT
+project.revision=8.0.0.0-28
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=8.0-SNAPSHOT
-dependency.pentaho-xul.revision=8.0-SNAPSHOT
-dependency.kettle5-log4j.revision=8.0-SNAPSHOT
+dependency.kettle.revision=8.0.0.0-28
+dependency.pentaho-xul.revision=8.0.0.0-28
+dependency.kettle5-log4j.revision=8.0.0.0-28
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.2.9
