[ENGOPS-1757] version name consolidation

--- a/build.properties
+++ b/build.properties
@@ -6,9 +6,9 @@ project.revision=8.1-SNAPSHOT
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=8.1-SNAPSHOT
-dependency.pentaho-xul.revision=8.1-SNAPSHOT
-dependency.kettle5-log4j.revision=8.1-SNAPSHOT
+pdi.version=8.1-SNAPSHOT
+pentaho-xul.version=8.1-SNAPSHOT
+pdi.version=8.1-SNAPSHOT
 
 dependency.libthrift.revision=0.9.1
 dependency.apache-cassandra.revision=2.2.9
