[BACKLOG-20423] Update downstreams

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -37,8 +37,8 @@
 			<artifactId>kettle-ui-swt</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>pentaho</groupId>
-			<artifactId>pentaho-xul-core</artifactId>
+			<groupId>org.pentaho</groupId>
+			<artifactId>commons-xul-core</artifactId>
 		</dependency>
 
 		<!-- Third-party (external) dependencies -->
@@ -150,10 +150,6 @@
 		</dependency>
 
 		<!-- ######################### TEST ######################### -->
-		<dependency>
-			<groupId>pentaho-kettle</groupId>
-			<artifactId>kettle-core</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>pentaho-kettle</groupId>
 			<artifactId>kettle-engine</artifactId>
