--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<concurrentlinkedhashmap-lru.version>1.4</concurrentlinkedhashmap-lru.version>
 		<log4j.version>1.2.14</log4j.version>
 		<junit.version>4.11</junit.version>
-		<commons-vfs2.version>2.1-20150824</commons-vfs2.version>
+		<commons-vfs2.version>2.2</commons-vfs2.version>
 		<slf4j.version>1.7.7</slf4j.version>
 		<servlet.version>3.0.1</servlet.version>
 		<jackson.version>1.9.2</jackson.version>
