--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,10 +6,10 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-cassandra-plugin-parent</artifactId>
-    <version>8.2.0.0-SNAPSHOT</version>
+    <version>8.2.0.1-427</version>
   </parent>
   <artifactId>pentaho-cassandra-plugin</artifactId>
-  <version>8.2.0.0-SNAPSHOT</version>
+  <version>8.2.0.1-427</version>
   <packaging>jar</packaging>
   <name>Cassandra Plugin Core</name>
   <properties>
