--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -6,10 +6,10 @@
 	<parent>
 		<groupId>org.pentaho</groupId>
 		<artifactId>pentaho-cassandra-plugin-parent</artifactId>
-		<version>9.0.0.0-SNAPSHOT</version>
+		<version>9.0.0.6-690</version>
 	</parent>
 	<artifactId>pentaho-cassandra-plugin-assemblies</artifactId>
-	<version>9.0.0.0-SNAPSHOT</version>
+	<version>9.0.0.6-690</version>
 	<packaging>pom</packaging>
 	<name>Cassandra Plugin Assemblies</name>
 	<modules>
