--- a/assemblies/plugin/pom.xml
+++ b/assemblies/plugin/pom.xml
@@ -6,10 +6,10 @@
 	<parent>
 		<groupId>org.pentaho</groupId>
 		<artifactId>pentaho-cassandra-plugin-assemblies</artifactId>
-		<version>9.3.0.0-SNAPSHOT</version>
+		<version>9.3.0.0-254</version>
 	</parent>
 	<artifactId>pentaho-cassandra-plugin-package</artifactId>
-	<version>9.3.0.0-SNAPSHOT</version>
+	<version>9.3.0.0-254</version>
 	<packaging>pom</packaging>
 	<name>Cassandra Plugin Package</name>
 	<dependencies>
