--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>9.3.0.0-SNAPSHOT</version>
+    <version>9.3.0.0-11</version>
   </parent>
   <artifactId>pentaho-cassandra-plugin-parent</artifactId>
   <packaging>pom</packaging>
@@ -22,7 +22,7 @@
   </licenses>
   <properties>
     <license.licenseName>apache_v2</license.licenseName>
-    <pdi.version>9.3.0.0-SNAPSHOT</pdi.version>
+    <pdi.version>9.3.0.0-11</pdi.version>
     <cassandra.version>3.11.1</cassandra.version>
     <swt.version>4.6</swt.version>
     <cassandra-driver.version>3.4.0</cassandra-driver.version>
@@ -30,7 +30,7 @@
     <apache.commons.lang3.version>3.0</apache.commons.lang3.version>
     <commons-lang.version>2.6</commons-lang.version>
     <jface.version>3.3.0-I20070606-0010</jface.version>
-    <commons-xul.version>9.3.0.0-SNAPSHOT</commons-xul.version>
+    <commons-xul.version>9.3.0.0-11</commons-xul.version>
     <guava.version>17.0</guava.version>
     <snakeyaml.version>1.11</snakeyaml.version>
     <netty.version>4.0.44.Final</netty.version>
@@ -396,4 +396,3 @@
     </dependencies>
   </dependencyManagement>
 </project>
-
