--- a/pom.xml
+++ b/pom.xml
@@ -23,15 +23,15 @@
   <properties>
     <license.licenseName>apache_v2</license.licenseName>
     <pdi.version>10.1.0.0-SNAPSHOT</pdi.version>
-    <cassandra.version>3.11.1</cassandra.version>
+    <cassandra.version>4.1.3</cassandra.version>
     <swt.version>4.6</swt.version>
-    <cassandra-driver.version>3.11.3</cassandra-driver.version>
+    <cassandra-driver.version>4.17.0</cassandra-driver.version>
     <mockito.version>1.9.5</mockito.version>
     <apache.commons.lang3.version>3.0</apache.commons.lang3.version>
     <commons-lang.version>2.6</commons-lang.version>
     <jface.version>3.3.0-I20070606-0010</jface.version>
     <commons-xul.version>10.1.0.0-SNAPSHOT</commons-xul.version>
-    <netty.version>4.0.44.Final</netty.version>
+    <netty.version>4.1.101.Final</netty.version>
     <clearspring-stream.version>2.8.0</clearspring-stream.version>
     <sigar.version>1.6.4</sigar.version>
     <dropwizard-metrics.version>3.1.0</dropwizard-metrics.version>
@@ -160,8 +160,8 @@
         <scope>compile</scope>
       </dependency>
       <dependency>
-        <groupId>com.datastax.cassandra</groupId>
-        <artifactId>cassandra-driver-core</artifactId>
+        <groupId>com.datastax.oss</groupId>
+        <artifactId>java-driver-core</artifactId>
         <version>${cassandra-driver.version}</version>
         <scope>compile</scope>
         <exclusions>
@@ -172,9 +172,45 @@
         </exclusions>
       </dependency>
       <dependency>
-        <groupId>com.datastax.cassandra</groupId>
-        <artifactId>cassandra-driver-extras</artifactId>
+        <groupId>com.datastax.oss</groupId>
+        <artifactId>java-driver-query-builder</artifactId>
         <version>${cassandra-driver.version}</version>
+        <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.datastax.oss</groupId>
+        <artifactId>java-driver-shaded-guava</artifactId>
+        <version>25.1-jre</version>
+        <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.datastax.oss</groupId>
+        <artifactId>native-protocol</artifactId>
+        <version>1.5.1</version>
+        <scope>compile</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.typesafe</groupId>
+        <artifactId>config</artifactId>
+        <version>1.4.3</version>
         <scope>compile</scope>
         <exclusions>
           <exclusion>
@@ -221,10 +257,28 @@
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+        <version>2.9.2</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
         <groupId>com.github.jbellis</groupId>
         <artifactId>jamm</artifactId>
         <version>${jamm.version}</version>
         <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>net.openhft</groupId>
+        <artifactId>chronicle-core</artifactId>
+        <version>2.20.126</version>
+        <scope>runtime</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>net.java.dev.jna</groupId>
@@ -322,12 +376,47 @@
           </exclusion>
         </exclusions>
       </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.10.1</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>2.10.1</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.10.1</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.datatype</groupId>
+        <artifactId>jackson-datatype-jsr310</artifactId>
+        <version>2.10.1</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.2</version>
+        <scope>runtime</scope>
+      </dependency>
+      <dependency>
+        <groupId>javax.inject</groupId>
+        <artifactId>javax.inject</artifactId>
+        <version>1</version>
+        <scope>runtime</scope>
+      </dependency>
 
       <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>${apache.commons.lang3.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>io.netty</groupId>
@@ -352,6 +441,11 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-handler</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-resolver</artifactId>
         <version>${netty.version}</version>
       </dependency>
       <dependency>
