--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
     <cassandra.version>3.11.1</cassandra.version>
     <swt.version>4.6</swt.version>
     <cassandra-driver.version>3.11.3</cassandra-driver.version>
-    <mockito.version>1.9.5</mockito.version>
+    <mockito.version>5.10.0</mockito.version>
     <apache.commons.lang3.version>3.0</apache.commons.lang3.version>
     <commons-lang.version>2.6</commons-lang.version>
     <jface.version>3.3.0-I20070606-0010</jface.version>
@@ -41,8 +41,9 @@
     <high-scale-lib.version>1.0.6</high-scale-lib.version>
     <supercsv.version>2.1.0</supercsv.version>
     <libthrift.version>0.12.0</libthrift.version>
-    <junit.version>4.11</junit.version>
+    <junit.version>4.13.2</junit.version>
     <xml-apis.version>2.0.2</xml-apis.version>
+    <byte-buddy.version>1.12.16</byte-buddy.version>
   </properties>
   <profiles>
     <profile>
@@ -369,7 +370,7 @@
       </dependency>
       <dependency>
         <groupId>org.mockito</groupId>
-        <artifactId>mockito-all</artifactId>
+        <artifactId>mockito-core</artifactId>
         <version>${mockito.version}</version>
         <scope>test</scope>
         <exclusions>
