[BACKLOG-41601]-Upgrade sun jersey from 1.x to glassfish jersey 2.x

--- a/assemblies/plugin/pom.xml
+++ b/assemblies/plugin/pom.xml
@@ -252,6 +252,7 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
+			<version>${codehaus-jackson.version}</version>
 			<scope>compile</scope>
 			<exclusions>
 				<exclusion>
