--- a/core/pom.xml
+++ b/core/pom.xml
@@ -108,6 +108,7 @@
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
+      <version>${codehaus-jackson.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
